# catalystx

./: .gitignore  .gitmodules  CMakeLists.txt  configure.sh  invoke.yaml  tasks.py
include/: app_cmds.h  app_gpio.h  app_main.h  app_prop_id.h  app_tasks.h  app_ui.h  audio_synth.h  build_info.h  buzzer.h  cmds_filesys.h  dac.h  debounce.h  disco_ui.hpp  i2s.h  log_evfs.h  sample_device.h  sample_device_dac.h  sample_device_i2s.h  sample_device_sdl.h  ui_panel.h  ui_units.h
include/lib_cfg/: FreeRTOSConfig.h  build_config.h.in  build_time.h.in  cstone_cfg_stm32.h  lv_conf.h  lv_drv_conf.h  tusb_config.h
include/stm32/: app_stm32.h  bsp_conf.h  stm32_it.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
scripts/: banned_funcs.txt  build_pc.cmake  build_stm32.cmake  program_bmp.sh  report_banned.sh  stm32_cfg.cmake  stm32f401_cfg.cmake  stm32f429N_cfg.cmake  stm32f4_cfg.cmake  toolchain_arm_generic.cmake
scripts/stm32/: STM32F103CBTx_FLASH.ld  STM32F401CCUx_FLASH.ld  STM32F429ZITx_FLASH.ld  STM32F429ZNIx_FLASH.ld
src/: app_cmds.c  app_main.c  app_tasks.c  app_ui.c  audio_synth.c  build_info.c  buzzer_input.c  cmds_filesys.c  debounce.c  disco_ui.cpp  log_evfs.c  newlib_syscalls.c  sample_device.c  sample_device_dac.c  sample_device_i2s.c  sample_device_sdl.c  ui_panel.c  ui_units.c
src/stm32/: app_stm32f1.c  app_stm32f4.c  stm32f1xx_it.c  stm32f4xx_it.c
tools/elf_patch/: CMakeLists.txt
tools/elf_patch/src/: build_config.h.in  elf_patch.c
